flux/local-management/harbor/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: istio-system
spec:
  hosts:
    - "harbor.management.local"
  gateways:
    - istio-ingress-gateway
  http:
    - route:
        - destination:
            host: harbor-local-portal.harbor.svc.cluster.local
            port:
              number: 8080
